
20111123: V1.5.6
  + Merged partly from guidev about the LIBAVFORMAT_VERSION macro to 
    make the makefile workable in archlinux, ubuntu 10.10 and mingw
  + Implemented a simple build-in profile.

20111122: 
  + Release tag: RELEASE_1_5_5
  + All .a files were missing under the mswin/ directory because of the 
    wrong setting of the .gitignore file. Now retrieved them.

20111115: V1.5.5 
  + Integrated other libraries into the mswin branch so they could 
    be managed by git
  + Revisioned the makefile for MinGW

20111104:
  + Revisioned this project in MinGW and made it workable in MS Windows
  + Fixed the conditional compiling error for the FFMPEG version control

20111021: V1.5.4
  + merged the id_*.c into id_lookup.c
  + slightly adjusted the Makefile

20111021: V1.5.3
  + Release tag: RELEASE_1_5_3
  + Merge two branches into the new version for release

20111021: V1.5.2
  + Supported the maximum number when ripping the key frames
    Command line now support the '-p key@N' opion

20111007: V1.5.2
  + Added a rectify function in video_snapshot_skim() to speed up the
    doing in the unseekable media files.
  + Refined the video_find_stream() so it could also support 0.6.3 ffmpeg

20111006: V1.5.1
  + Fixed a bug of finding the video stream, now using av_find_best_stream().
  + Added the signal handler. Now ezthumb can be broken in the middle.

20111001: V1.5.0
  Make fixes and ready for release

20110908: V1.4.2
  Displaying the screen shot method has been moved into video_snap_begin()

20110908: V1.4.1
  heuristic method is ready for test.

20110906: V1.4.0
  Many codes regroups in recent day. Begin with a thought that reducing 
  scan passes if video file doesn't support backward seek. I roughly
  have got an idea of a heuristic method. Hope it can be done in 1.4.1

20110831:
  + ezthumb.c: a little bit speed up of the video_duration() function

20110830: V1.3.3
  + ezthumb.c: duration structure changed

20110829: